# RemoteClaudeCodeServer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  claude_cli_usage.md  kill_server.sh  run.sh  run_server.sh
TestingWebSocketClient/TestingWebSocketClient/: ClaudeConnectApp.swift  ContentView.swift  Info.plist  TestingWebSocketClientApp.swift
TestingWebSocketClient/TestingWebSocketClient.xcodeproj/: project.pbxproj
TestingWebSocketClient/TestingWebSocketClient/App/: TestingWebSocketClientApp.swift
TestingWebSocketClient/TestingWebSocketClient/Core/: DependencyContainer.swift  WebSocketManager.swift
TestingWebSocketClient/TestingWebSocketClient/Core/Models/: ClientMessage.swift  ConnectionStatus.swift  Message.swift  Repository.swift  ServerMessage.swift  SlashCommand.swift
TestingWebSocketClient/TestingWebSocketClient/Core/Network/: WebSocketClient.swift
TestingWebSocketClient/TestingWebSocketClient/Core/Services/: AuthenticationService.swift  MessageService.swift  RepositoryService.swift
TestingWebSocketClient/TestingWebSocketClient/Features/Logs/: LogsView.swift
TestingWebSocketClient/TestingWebSocketClient/Models/: LogEntry.swift
TestingWebSocketClient/TestingWebSocketClientTests/: TestingWebSocketClientTests.swift
TestingWebSocketClient/TestingWebSocketClientUITests/: TestingWebSocketClientUITests.swift  TestingWebSocketClientUITestsLaunchTests.swift
src/: auth.rs  config.rs  connection.rs  lib.rs  main.rs  messages.rs  repository.rs  server.rs  slash_commands.rs  types.rs  ui.rs
(+24 files in other folders)
