[package]
name = "remoteclaudecode-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
uuid = { version = "1.11", features = ["v4"] }
qrcode = "0.14"